<resources>
    <string name="app_name">Smart Hospital</string>
    <string name="text1">Cấp cứu, Khám bảo hiểm, khám ngoài giờ, Khám cho người nước ngoài</string>
    <string name="text2">Gwanghwamun is the main and largest gate of Gyeongbokgung Palace, in Jongno-gu, Seoul, South Korea.</string>
    <string name="text3">Tower Bridge is a combined bascule and suspension bridge in London built in 1886–1894.</string>
    <string name="text4">The Temple of Heaven is an imperial complex of religious buildings situated in the southeastern part…</string>
    <string name="text5">The Aegean Islands are within the sea and some bound it on its southern periphery…</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng Nhập</string>
    <string name="email">Tài khoản</string>
    <string name="password">Mật Khẩu</string>
    <string name="remember_me">Ghi nhớ</string>
    <string name="forgot_your_password">Bạn quên mật khẩu?</string>
    <string name="sign_up_here">Bạn chưa có tài khoản? Đăng ký tại đây</string>
    <string name="forgot_resend">Quên mật khẩu</string>
    <string name="forgot_send">Send</string>
    <string name="ma_xac_thuc">Nhập mã xác thực</string>
    <string name="send_to">Send to</string>
</resources>
