<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_intro"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/super_xlarge">

        <ImageButton
            android:id="@+id/login_btn_back"
            android:layout_width="@dimen/icon_back_width"
            android:layout_height="@dimen/icon_back_height"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/large"
            android:background="@color/transparent"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/gitOTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:isScrollContainer="false">

        <LinearLayout
            android:id="@+id/ln_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


            <com.uit.tahitu.hci.smarthospital.customView.CustomEditText
                android:id="@+id/login_edt_email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:background="@drawable/bg_edit_text_white"
                android:cursorVisible="true"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingEnd="@dimen/mini"
                android:paddingStart="14dp"
                android:textColor="@color/app_color"
                android:textSize="@dimen/default_text_size" />


            <com.uit.tahitu.hci.smarthospital.customView.CustomEditText
                android:id="@+id/login_edt_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_edit_text_white"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingEnd="@dimen/mini"
                android:paddingStart="14dp"
                android:textColor="@color/app_color"
                android:textSize="@dimen/default_text_size" />

            <CheckBox
                android:id="@+id/login_checkbox"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="20dp"
                android:button="@drawable/bg_checkbox"
                android:checked="false"
                android:paddingLeft="5dp"
                android:text="@string/remember_me"
                android:textColor="@color/white" />

            <Button
                android:background="@drawable/bg_btn_blue_corner"
                android:id="@+id/login_btn_login"
                android:layout_width="@dimen/login_btn_width"
                android:layout_height="44dp"
                android:layout_marginTop="@dimen/large_30dp"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/color_text_white_pressed"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:layout_marginStart="40dp"
                android:id="@+id/intro_tv_forgot"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/login_tv_sign_up_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_x"
                android:text="@string/sign_up_here"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>